--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "strictNullChecks": true,
+    "downlevelIteration": true,
   },
 }
