--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    // "strict": true,
+    "strict": true,
     // "alwaysStrict": true,
   },
   "include": [
