ci: body must exists

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,4 +71,4 @@ jobs:
           git push origin actions_temp
 
           echo ${{ secrets.PAT_TOKEN }} | gh auth login --with-token
-          gh pr create --base "main" --head "actions_temp" --title "upgrade venus to ${{needs.publish-npm.outputs.version}}"
+          gh pr create --base "main" --head "actions_temp" --title "upgrade venus to ${{needs.publish-npm.outputs.version}}" --body "This pr was triggered by github-actions."
