--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,7 +54,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - name: ss
+      - name: Commit PR to sakura-love
         run: |
           echo "new version: ${{needs.publish-npm.outputs.version}}"
 
