--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,8 +9,8 @@ on:
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.getversion.outputs.version }}
+    # outputs:
+    #   version: ${{ steps.getversion.outputs.version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -39,7 +39,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
   
-  create-pull-request-to-hsm-stage:
+  pr-to-hsm-stage:
     runs-on: ubuntu-latest
     needs: publish-npm
     steps:
