--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,7 +56,7 @@ jobs:
           python-version: "3.10"
       - name: Commit PR to sakura-love
         run: |
-          version=${{steps.getversion.outputs.version}}
+          version=${{ needs.publish-npm.steps.getversion.outputs.version }}
           echo "new version: ${version}"
 
           cd HoshimiStage
