ci: update hint

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -72,4 +72,4 @@ jobs:
           git push origin "venus_${version}"
 
           echo ${{ secrets.PAT_TOKEN }} | gh auth login --with-token
-          gh pr create --base "main" --head "venus_${version}" --title "upgrade venus to ${version}" --body "This pr was triggered by github-actions."
+          gh pr create --base "main" --head "venus_${version}" --title "upgrade venus to ${version}" --body "This pull-request was automatically triggered by [VenusSysLib](https://github.com/MalitsPlus/VenusSysLib)."
