--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "npx ts-node test/test.ts"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2"
   },
