--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "lib": [
-      "esnext",
-      "dom",
-    ],
-    "module": "commonjs",
+    "target": "ES2020",
+    "module": "Node16",
+    // "moduleResolution": "Node",
+    // "lib": [
+    //   "ES2017",
+    // ],
     "outDir": "out",
     "newLine": "lf",
     "declaration": true,
@@ -15,11 +15,12 @@
     "strictNullChecks": true,
     "downlevelIteration": true,
     "preserveConstEnums": true,
-    "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "strict": true,
-    // "alwaysStrict": true,
+    "isolatedModules": true,
+    "allowSyntheticDefaultImports": true,
+    "allowJs": true,
   },
   "include": [
     "**/*.ts",
