--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Publish to npm
 
 on:
-  push:
-    paths:
-      - 'package.json'
+  # push:
+  #   paths:
+  #     - 'package.json'
   workflow_dispatch:
 
 jobs:
