--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,37 +39,37 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
   
-  pr-to-hsm-stage:
-    runs-on: ubuntu-latest
-    needs: publish-npm
-    steps:
-      - name: Checkout HoshimiStage
-        uses: actions/checkout@v3
-        with:
-          repository: MalitsPlus/HoshimiStage
-          path: HoshimiStage
-          token: ${{ secrets.PAT_TOKEN }}
-          ref: main
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.10"
-      - name: Commit PR to sakura-love
-        run: |
-          version=${{ needs.publish-npm.outputs.version }}
-          echo "new version: ${version}"
+  # pr-to-hsm-stage:
+  #   runs-on: ubuntu-latest
+  #   needs: publish-npm
+  #   steps:
+  #     - name: Checkout HoshimiStage
+  #       uses: actions/checkout@v3
+  #       with:
+  #         repository: MalitsPlus/HoshimiStage
+  #         path: HoshimiStage
+  #         token: ${{ secrets.PAT_TOKEN }}
+  #         ref: main
+  #     - name: Set up Python 3.10
+  #       uses: actions/setup-python@v3
+  #       with:
+  #         python-version: "3.10"
+  #     - name: Commit PR to sakura-love
+  #       run: |
+  #         version=${{ needs.publish-npm.outputs.version }}
+  #         echo "new version: ${version}"
 
-          cd HoshimiStage
-          git switch -c "venus_${version}"
+  #         cd HoshimiStage
+  #         git switch -c "venus_${version}"
 
-          python upgrade_venus.py ${version}
+  #         python upgrade_venus.py ${version}
 
-          git config user.name "hoshimi-venus"
-          git config user.email "anonymous@e.mail"
+  #         git config user.name "hoshimi-venus"
+  #         git config user.email "anonymous@e.mail"
           
-          git add .
-          git commit -m 'build: upgrade venus'
-          git push origin "venus_${version}"
+  #         git add .
+  #         git commit -m 'build: upgrade venus'
+  #         git push origin "venus_${version}"
 
-          echo ${{ secrets.PAT_TOKEN }} | gh auth login --with-token
-          gh pr create --base "main" --head "venus_${version}" -l "venus" --title "upgrade venus to ${version}" --body "***This pull-request was automatically triggered by [VenusSysLib](https://github.com/MalitsPlus/VenusSysLib).***"
+  #         echo ${{ secrets.PAT_TOKEN }} | gh auth login --with-token
+  #         gh pr create --base "main" --head "venus_${version}" -l "venus" --title "upgrade venus to ${version}" --body "***This pull-request was automatically triggered by [VenusSysLib](https://github.com/MalitsPlus/VenusSysLib).***"
